syntax = "proto3";

package paperclip.workspace;

import "patches.proto";

// Workspace service for real-time preview
service WorkspaceService {
  // Stream preview updates for a file
  rpc StreamPreview(PreviewRequest) returns (stream PreviewUpdate);

  // Watch files in a directory
  rpc WatchFiles(WatchRequest) returns (stream FileEvent);

  // Apply a semantic mutation to a document
  rpc ApplyMutation(MutationRequest) returns (MutationResponse);

  // Get document outline (AST structure for layers panel)
  rpc GetDocumentOutline(OutlineRequest) returns (OutlineResponse);

  // NEW: Stream buffer content directly (unidirectional, production-hardened)
  rpc StreamBuffer(BufferRequest) returns (stream PreviewUpdate);

  // NEW: Explicit state cleanup for client
  rpc ClosePreview(ClosePreviewRequest) returns (ClosePreviewResponse);

  // NEW: Heartbeat for liveness tracking
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);

  // NEW: Bidirectional CRDT sync for collaborative editing
  rpc CrdtSync(stream CrdtSyncRequest) returns (stream CrdtSyncResponse);
}

// Request to start preview streaming
message PreviewRequest {
  string root_path = 1;
}

// Preview update containing VDocument patches
message PreviewUpdate {
  string file_path = 1;
  repeated paperclip.patches.VDocPatch patches = 2;
  optional string error = 3;
  int64 timestamp = 4;
  uint64 version = 5;

  // NEW: Include mutation acknowledgments
  repeated string acknowledged_mutation_ids = 6;
  optional string changed_by_client_id = 7;
}

// Request to watch files
message WatchRequest {
  string directory = 1;
  repeated string patterns = 2;  // e.g., ["*.pc"]
}

// File change event
message FileEvent {
  enum EventType {
    CREATED = 0;
    MODIFIED = 1;
    DELETED = 2;
  }

  EventType event_type = 1;
  string file_path = 2;
  int64 timestamp = 3;
}

// ============================================================================
// Mutation Support (Phase 1)
// ============================================================================

// Request to apply a semantic mutation
message MutationRequest {
  string client_id = 1;
  string file_path = 2;
  Mutation mutation = 3;
  uint64 expected_version = 4;  // Optimistic concurrency control
}

// Response to mutation application
message MutationResponse {
  oneof result {
    MutationAck ack = 1;
    MutationRebased rebased = 2;
    MutationNoop noop = 3;
  }
}

// Mutation was accepted and applied
message MutationAck {
  string mutation_id = 1;
  uint64 new_version = 2;
  int64 timestamp = 3;
}

// Mutation was transformed (rebased) due to concurrent changes
message MutationRebased {
  string original_mutation_id = 1;
  Mutation transformed_mutation = 2;
  uint64 new_version = 3;
  string reason = 4;
}

// Mutation had no effect (e.g., node already deleted)
message MutationNoop {
  string mutation_id = 1;
  string reason = 2;
}

// Semantic AST operation
message Mutation {
  string mutation_id = 1;
  int64 timestamp = 2;

  oneof mutation_type {
    MoveElement move_element = 3;
    UpdateText update_text = 4;
    SetInlineStyle set_inline_style = 5;
    SetAttribute set_attribute = 6;
    RemoveNode remove_node = 7;
    InsertElement insert_element = 8;
    SetFrameBounds set_frame_bounds = 9;
  }
}

// Set frame bounds (updates @frame doc comment)
message SetFrameBounds {
  string frame_id = 1;
  Bounds bounds = 2;
}

// Frame bounds
message Bounds {
  float x = 1;
  float y = 2;
  float width = 3;
  float height = 4;
}

// Move an element to a new parent at index
message MoveElement {
  string node_id = 1;
  string new_parent_id = 2;
  uint32 index = 3;
}

// Update text content (atomic replacement)
message UpdateText {
  string node_id = 1;
  string content = 2;
}

// Set an inline style property
message SetInlineStyle {
  string node_id = 1;
  string property = 2;
  string value = 3;
}

// Set an attribute value
message SetAttribute {
  string node_id = 1;
  string name = 2;
  string value = 3;
}

// Remove a node from the tree
message RemoveNode {
  string node_id = 1;
}

// Insert a new element (rare - most creation via templates)
message InsertElement {
  string parent_id = 1;
  uint32 index = 2;
  string element_json = 3;  // Serialized AST element
}

// ============================================================================
// Document Outline Support (Phase 1)
// ============================================================================

// Request document outline
message OutlineRequest {
  string file_path = 1;
}

// Document outline response
message OutlineResponse {
  repeated OutlineNode nodes = 1;
  uint64 version = 2;
}

// Single node in document outline
message OutlineNode {
  string node_id = 1;
  NodeType type = 2;
  optional string parent_id = 3;
  repeated string child_ids = 4;
  SourceSpan span = 5;
  optional string label = 6;  // e.g., component name, tag name
}

// Node type enum
enum NodeType {
  COMPONENT = 0;
  ELEMENT = 1;
  TEXT = 2;
  CONDITIONAL = 3;
  REPEAT = 4;
  INSERT = 5;
}

// Source code location
message SourceSpan {
  uint32 start_line = 1;
  uint32 start_col = 2;
  uint32 end_line = 3;
  uint32 end_col = 4;
}

// ============================================================================
// CRDT Sync Support (Collaborative Editing)
// ============================================================================

// Bidirectional CRDT sync stream
// Client sends updates, server broadcasts to other clients and sends VDOM patches
message CrdtSyncRequest {
  string client_id = 1;
  string file_path = 2;

  oneof message_type {
    // Initial sync - join session and get current state
    CrdtJoin join = 3;
    // Send local CRDT update
    CrdtUpdate update = 4;
    // Acknowledge received update (for flow control)
    CrdtAck ack = 5;
  }
}

// Join a CRDT editing session
message CrdtJoin {
  // Client's current state vector (empty for new session)
  bytes state_vector = 1;
}

// CRDT update (Yjs-compatible binary format)
message CrdtUpdate {
  // Delta update (encoded via Y.encodeStateAsUpdate)
  bytes update = 1;
  // Client's state vector after this update
  bytes state_vector = 2;
  // Origin of the change (for filtering)
  string origin = 3;
}

// Acknowledge receipt of an update
message CrdtAck {
  uint64 sequence = 1;
}

// Server response in CRDT sync stream
message CrdtSyncResponse {
  oneof message_type {
    // Welcome message with current document state
    CrdtWelcome welcome = 1;
    // Remote CRDT update from another client
    CrdtUpdate remote_update = 2;
    // VDOM patch after successful parse
    CrdtVdomPatch vdom_patch = 3;
    // CSSOM update after successful parse
    CrdtCssomPatch cssom_patch = 4;
    // Parse error (document still synced, just invalid)
    CrdtParseError parse_error = 5;
  }
}

// Welcome message when joining a session
message CrdtWelcome {
  // Full document state (for new clients)
  bytes document_state = 1;
  // Current state vector
  bytes state_vector = 2;
  // Current VDOM (if document is valid)
  optional paperclip.patches.VDocPatch initial_vdom = 3;
  // Session info
  uint64 version = 4;
  uint32 client_count = 5;
}

// VDOM patch from server after parse
message CrdtVdomPatch {
  repeated paperclip.patches.VDocPatch patches = 1;
  uint64 version = 2;
  // Which client triggered this update (for origin filtering)
  string origin_client_id = 3;
}

// CSSOM update from server
message CrdtCssomPatch {
  repeated CssRule rules = 1;
  uint64 version = 2;
}

// CSS rule for CSSOM
message CssRule {
  string selector = 1;
  map<string, string> properties = 2;
}

// Parse error (document synced but invalid)
message CrdtParseError {
  string error = 1;
  uint32 line = 2;
  uint32 column = 3;
}

// ============================================================================
// Buffer Streaming Support (Production-Hardened)
// ============================================================================

// Request to stream buffer content directly (no file I/O)
message BufferRequest {
  string client_id = 1;
  string file_path = 2;
  string content = 3;
  // Version-based sync for reconnection handling
  optional uint64 expected_state_version = 4;
}

// Request to close preview and cleanup state
message ClosePreviewRequest {
  string client_id = 1;
}

// Response confirming state cleanup
message ClosePreviewResponse {
  bool success = 1;
  optional string message = 2;
}

// Heartbeat request for liveness tracking
message HeartbeatRequest {
  string client_id = 1;
}

// Heartbeat response
message HeartbeatResponse {
  bool acknowledged = 1;
  uint64 server_time = 2;
}
